[package]
name = "quartzctl"
version = "0.1.0"
edition = "2021"
description = "libquartz based apps manager"
license = "BSD-2-Clause"
authors = ["Bultek. <help@bultek.com.ua>"]
repository = "https://github.com/Bultek/quartzctl"
keywords = ["libquartz", "control"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
libquartz = "0"
clap = "3.1"
